# esc-nav-stack

./: .gitignore  LICENSE  README.md
esc_move_base_control/: CMakeLists.txt  package.xml
esc_move_base_control/config/: esc_move_base_control.yaml  pepper_move_base_control.yaml
esc_move_base_control/launch/: pepper_move_base_control.launch
esc_move_base_control/scripts/: base_controller.py  tilt_head.py
esc_move_base_mapping/: CMakeLists.txt  package.xml
esc_move_base_mapping/config/: esc_move_base_mapping.yaml
esc_move_base_mapping/launch/: esc_move_base_mapping.launch
esc_move_base_mapping/src/: octomap_gridmap_pc.cpp  octomap_ls_pc.cpp  octomap_pc.cpp
esc_move_base_msgs/: CMakeLists.txt  package.xml
esc_move_base_msgs/msg/: Path2D.msg
esc_move_base_planning/: CMakeLists.txt  package.xml
esc_move_base_planning/config/: esc_move_base_planning.yaml
esc_move_base_planning/include/: state_cost_objective.h  state_validity_checker_grid_map_R2.h  state_validity_checker_octomap_fcl_R2.h  state_validity_checker_social_octomap_fcl_R2.h
esc_move_base_planning/include/planner/: RRTstarMod.h
esc_move_base_planning/launch/: esc_move_base_planning.launch
esc_move_base_planning/src/: planning_framework_main.cpp  state_cost_objective.cpp  state_validity_checker_grid_map_R2.cpp  state_validity_checker_octomap_fcl_R2.cpp  state_validity_checker_social_octomap_fcl_R2.cpp
esc_move_base_planning/src/planner/: RRTstarMod.cpp
pepper_move_base/: README.md
pepper_move_base/pepper_move_base_control/launch/: pepper_move_base_control.launch
pepper_move_base/pepper_move_base_mapping/launch/: pepper_move_base_mapping.launch
pepper_move_base/pepper_move_base_msgs/: CMakeLists.txt  package.xml
pepper_move_base/pepper_move_base_planning/config/: pepper_move_base_planning.yaml
pepper_move_base/pepper_move_base_planning/include/: new_state_sampler.h
pepper_move_base/pepper_move_base_planning/src/: state_cost_objective.cpp  state_validity_checker_octomap_fcl_R2.cpp
pepper_move_base_control/: CMakeLists.txt  package.xml
pepper_move_base_control/scripts/: base_controller.py  tilt_head.py
pepper_move_base_mapping/: package.xml
pepper_move_base_mapping/src/: octomap_ls_pc.cpp
pepper_move_base_msgs/action/: Goto2D.action  GotoRegion2D.action
pepper_move_base_planning/: package.xml
pepper_move_base_planning/include/: state_validity_checker_octomap_fcl_R2.h
pepper_move_base_planning/src/: new_state_sampler.cpp
