<?xml version="1.0"?>
<package format="2">
  <name>esc_move_base_mapping</name>
  <version>0.0.0</version>
  <description>Octomap laser scan package</description>

  <maintainer email="juandhv@rice.edu">Juan David Hernandez Vega</maintainer>

  <license>MIT</license>



  <buildtool_depend>catkin</buildtool_depend>
  <!--build_depend>geometry_msgs</build_depend-->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>rqt_robot_monitor</depend>
  <depend>diagnostic_aggregator</depend>
  <!--depend>rqt_runtime_monitor</depend-->
  <depend>octomap_rviz_plugins</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pedsim_msgs</depend>
  <depend>grid_map</depend>
  <depend>grid_map_sdf</depend>

  <export>

  </export>
</package>