<?xml version="1.0"?>
<package format="2">
  <name>esc_move_base_planning</name>
  <version>0.0.0</version>
  <description>The esc_move_base_planning package</description>

  <maintainer email="silvas1@cardiff.ac.uk">Steven Alexander Silva Mendoza</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <!-- tf/tf2 -->
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- msgs -->
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- esc -->
  <depend>esc_move_base_msgs</depend>
  <depend>esc_move_base_control</depend>
  <depend>esc_move_base_mapping</depend>

  <!-- pedsim messages dependency -->
  <depend>pedsim_msgs</depend>

  <!-- OMPL -->
  <depend>ompl</depend>

  <export>


  </export>
</package>