<?xml version="1.0"?>
<package format="2">
  <name>pepper_move_base_mapping</name>
  <version>0.0.0</version>
  <description>Octomap laser scan package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="juandhv@rice.edu">Juan David Hernandez Vega</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/autopilot_laser_octomap</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use depend for packages you need at runtime: -->
  <!--   <depend>message_runtime</depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <!--build_depend>geometry_msgs</build_depend-->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>rqt_robot_monitor</depend>
  <depend>diagnostic_aggregator</depend>
  <!--depend>rqt_runtime_monitor</depend-->
  <depend>octomap_rviz_plugins</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pedsim_ros</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>