<?xml version="1.0"?>
<package format="2">
  <name>pepper_move_base_planning</name>
  <version>0.0.0</version>
  <description>The pepper_move_base_planning package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="juandhv@rice.edu">Juan David Hernandez Vega</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <!-- tf/tf2 -->
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- msgs -->
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Pepper -->
  <depend>pepper_move_base_msgs</depend>
  <depend>pepper_move_base_control</depend>
  <depend>pepper_move_base_mapping</depend>

  <!-- pedsim messages dependency -->
  <depend>pedsim_ros</depend>

  <!-- OMPL -->
  <depend>ompl</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>