<?xml version="1.0"?>
<package format="2">
  <name>pepper_move_base_msgs</name>
  <version>0.0.0</version>
  <description>The pepper_move_base_msgs package</description>

  <maintainer email="juandhv@rice.edu">Juan David Hernandez Vega</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roslib</depend>  
  <depend>actionlib_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
